--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <h1 class="one">
           Hey
           <span id="name"></span>
-        </h1>SHNAYYA
-        <p class="two" id="greetingText">I really like ur name btw and of course the person too!</p>
+        </h1>NADIA
+        <p class="two" id="greetingText">I really like ur personality btw and of course the person too!</p>
       </div>
       <div class="three">
-        <p>It's your birthday!!! :D</p>
+        <p>GLAD TO KNOW UUU :D</p>
       </div>
       <div class="four">
         <div class="text-box">
