--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Happy Birthday!!! :)</title>
+    <title>HAI BU BOS!!</title>
     <link
       href="https://fonts.googleapis.com/css?family=Work+Sans:300,400"
       rel="stylesheet"
@@ -25,30 +25,30 @@
           Hey
           <span id="name"></span>
         </h1>NADIA
-        <p class="two" id="greetingText">I really like ur personality btw and of course the person too!</p>
+        <p class="two" id="greetingText">Gue minta maaf soal kelakuan waktu itu btw wkwk</p>
       </div>
       <div class="three">
-        <p>GLAD TO KNOW UUU :D</p>
+        <p></p>
       </div>
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Selamat Ulang Tahunn!! Selamat Ulang Tahun buat orang paling nyebelin yang pernah gue temuin, gue selalu berdoa yang terbaik buat lo dihari ini dan seterusnya🎂🎉
+            Jujur gue gatau kenapa bisa confess ke lo tapi tujuan gue cuma mau tau sebenernya lo canggung apa ngga sama gue😭
           </p>
           <p class="fake-btn">Send</p>
         </div>
       </div>
       <div class="five">
-        <p class="idea-1">Im glad to meet u anw</p>
-        <p class="idea-2">And, i hope u being happy in ur life </p>
+        <p class="idea-1">Tapi gue ga canggung kokk</p>
+        <p class="idea-2">Gue harap lo juga ga canggung yaa HAHAH </p>
         <p class="idea-3">
-          I realised, I wanted to do something
+          Gue minta maaf 
           <strong>special</strong>
           .
         </p>
-        <p class="idea-4">Because,</p>
+        <p class="idea-4">Karnaaa,</p>
         <p class="idea-5">
-         u r special shnayya
+         Gue gamau jadi jauh sama loo
           <span>:)</span>
         </p>
         <p class="idea-6">
@@ -60,7 +60,7 @@
         <img src="" alt="" class="lydia-dp" id="imagePath" />
         <img src="img/hat.svg" alt="" class="hat" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Birthday!</h3>
+          <h3 class="wish-hbd">😁😁</h3>
           <h5 id="wishText"></h5>
         </div>
       </div>
