--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p class="idea-2">Gue harap lo juga ga canggung yaa HAHAH </p>
         <p class="idea-3">
           Gue minta maaf 
-          <strong>special</strong>
+          <strong>YAAAA</strong>
           .
         </p>
         <p class="idea-4">Karnaaa,</p>
