--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="one">
         <h1 class="one">
           Hey
-          <span id="name">Anak cantik dari BogorS</span>
+          <span id="name">Anak cantik dari Bogor</span>
         </h1>NADIA
         <p class="two" id="greetingText">Gue minta maaf soal kelakuan waktu itu btw wkwk</p>
       </div>
