--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Jujur gue gatau kenapa bisa confess ke lo tapi tujuan gue cuma mau tau sebenernya lo canggung apa ngga sama gue😭
+            Jujur gue gatau kenapa bisa confess ke lo tapi tujuan gue cuma mau 
+            tau sebenernya lo canggung apa ngga sama gue😭
           </p>
-          <p class="fake-btn">Send</p>
+          <p class="fake-btn">Lanjut</p>
         </div>
       </div>
       <div class="five">
@@ -52,8 +53,8 @@
           <span>:)</span>
         </p>
         <p class="idea-6">
-          <span>S</span>
-          <span>O</span>
+          <span>JA</span>
+          <span>DII</span>
         </p>
       </div>
       <div class="six">
@@ -101,9 +102,6 @@
         </div>
       </div>
       <div class="eight">
-        <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="20" cy="20" r="20" />
-        </svg>
         <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
           <circle cx="20" cy="20" r="20" />
         </svg>
